--- a/scss/partials/core/_base.scss
+++ b/scss/partials/core/_base.scss
@@ -16,6 +16,11 @@ body {
   line-height: 1.6;
   font-size: 17px;
   font-family: $font-display;
+
+  @media (min-width:500px){
+    overflow-y: hidden;
+  }
+  
 }
 
 a:hover {
